--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,9 @@
+@import url(//db.onlinewebfonts.com/c/4d138feded0a0dc57c384e7976428aa9?family=Abadi+MT+Std);
+
 body {
     width: 100vw;
     height: 100vh;
-    background: #EEF9BF;
+    background: #f2f2f2;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -9,15 +11,56 @@ body {
 }
 
 #title {
+    width: 90%;
+    height: 20%;
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 56px;
     line-height: 66px;
     letter-spacing: -0.004em;
-    color: #75B79E;
+    color: #1a1a1a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-#contentSpace {
+.logo {
+    font-style: italic;
+}
+
+.red {
+    color: #f50000;
+}
+
+#timer {
+    width: 100px;
+    height: 50px;
+    background-color: #1a1a1a;
+    color: #f2f2f2;
+    position: fixed;
+    right: 0;
+    top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#moveCounter {
+    width: 100px;
+    height: 50px;
+    background-color: #1a1a1a;
+    color: #f2f2f2;
+    position: fixed;
+    left: 0;
+    top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contentSpace {
     width: 70%;
     height: 70%;
     display: flex;
@@ -27,37 +70,49 @@ body {
     align-items: center;
 }
 
+
 button {
     width: 50px;
     height: 30px;
 }
 
 .card {
-    width: 120px;
+    width: 200px;
     height: 150px;
-    background: #A7E9AF;
-    border: 1px solid #99CEA8;
+}
+
+.face {
+    width: 100%;
+    height: 100%;
+    background: white;
+    border: 1px solid #1a1a1a;
     border-radius: 5px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
     display: flex;
     justify-content: center;
     align-items: center;
+    backface-visibility: hidden;
+    transition: all .5s;
+    transform-style: preserve-3d;
 }
 
 img {
-    height: 100px;
-    width: 100px;
+    width: 190px;
     background-size: cover;
 }
 
-.unturned {
-
-}
-
 .backFace {
-    
-    
+
 }
 
 .frontFace {
-    
+    transform: rotateY(180deg);
+}
+
+.turnFrontFace {
+    transform: rotateY(0deg);
+}
+
+.turnBackFace {
+    transform: rotateY(-180deg);
 }
