--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,14 +33,16 @@ body {
     color: #f50000;
 }
 
+#counters {
+    display: flex;
+    justify-content: space-between;
+}
+
 #timer {
     width: 100px;
     height: 50px;
     background-color: #1a1a1a;
     color: #f2f2f2;
-    position: fixed;
-    right: 0;
-    top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,9 +54,6 @@ body {
     height: 50px;
     background-color: #1a1a1a;
     color: #f2f2f2;
-    position: fixed;
-    left: 0;
-    top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
