--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,8 +15,9 @@ body {
     height: 20%;
     font-family: 'Roboto';
     font-weight: 700;
-    font-size: 56px;
-    line-height: 66px;
+    font-size: 35px;
+    text-align: center;
+    line-height: 45px;
     letter-spacing: -0.004em;
     color: #1a1a1a;
     display: flex;
@@ -34,13 +35,14 @@ body {
 }
 
 #counters {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 #timer {
-    width: 100px;
-    height: 50px;
+    width: 80px;
+    height: 40px;
     background-color: #1a1a1a;
     color: #f2f2f2;
     display: flex;
@@ -50,8 +52,8 @@ body {
 }
 
 #moveCounter {
-    width: 100px;
-    height: 50px;
+    width: 90px;
+    height: 40px;
     background-color: #1a1a1a;
     color: #f2f2f2;
     display: flex;
@@ -75,8 +77,9 @@ button {
 }
 
 .card {
-    width: 200px;
-    height: 150px;
+    width: 150px;
+    height: 100px;
+    margin: 2px;
     position: relative;
 }
 
@@ -97,7 +100,7 @@ button {
 }
 
 img {
-    width: 190px;
+    width: 140px;
     background-size: cover;
 }
 
